# forge

./: 00_VISION.md  01_LAYERED_ARCHITECTURE.md  02_MINIMAL_BOOTSTRAP_KERNEL.md  03_STATE_HORIZON_GAP_LOOP.md  04_REPOSITORY_STRUCTURE.md  05_FORGE_CLI_SPEC.md  06_RUNTIME_WINDOWS_WSL_DEVCONTAINER_CODEX.md  07_SELF_LEARNING_MEMORY.md  08_POLICIES_AND_GUARDS.md  09_IMPLEMENTATION_BACKLOG.md  10_ACCEPTANCE_TESTS.md  AGENTS.md  MANIFEST.md  README.md  forge.yml  pyproject.toml
.forge/backlog/: self_improvement_backlog.md
.forge/horizon/: maturity_model.md  principles.md  roadmap.md  target_architecture.md  vision.md
.forge/memory/: coding_rules.md  failure_patterns.md  human_preferences.md  success_patterns.md
.forge/runs/20260508-193351/: diff.patch  gap_analysis.md  lessons.md  outcome.md  state_snapshot.md  task.md  test-output.txt
.forge/runs/20260508-193653/: diff.patch  gap_analysis.md  (+8 more)
.forge/state/: architecture.md  capabilities.md  current_state.md  limitations.md  test_health.md
skills/coding/: SKILL.md
skills/gap-analyzer/: SKILL.md
skills/horizon-reader/: SKILL.md
skills/intake/: SKILL.md
skills/learning/: SKILL.md
skills/planning/: SKILL.md
skills/review/: SKILL.md
skills/security/: SKILL.md
skills/state-reader/: SKILL.md
skills/state-updater/: SKILL.md
src/forge/: __init__.py  config.py  gap.py  git_guard.py  horizon.py  main.py  markdown.py  memory.py  run_context.py  state.py  test_runner.py
tests/: __init__.py  conftest.py  test_gap.py  test_git_guard.py  test_memory.py  test_run_context.py  test_status.py  test_test_runner.py
